--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,7 +9,6 @@ jobs:
       matrix:
         arch: [Win32, x64, ARM, ARM64]
         type: [Release, "Release SDL2"]
-      # TODO: use python powershell or perl to convert to zip name later???
 
     steps:
       - uses: actions/checkout@v2
@@ -44,14 +43,16 @@ jobs:
           path:
             bin/${{ matrix.arch }}/${{ matrix.type }}
   mingw:
-    name: MinGW(-w64) build
+    name: MinGW-w64 build
     runs-on: ubuntu-latest
+    
     strategy:
       matrix:
         prefix: [x86-64, x86]
         type: ["", sdl2, lowend, sdldraw]
     env:
       ZIP_NAME: dosbox-x-mingw-${{ matrix.prefix }}-${{ matrix.type }}.zip
+      
     steps:
       - uses: actions/checkout@v2
         name: Checkout repo
@@ -62,7 +63,7 @@ jobs:
       - run: ./autogen.sh
         name: Autoregen
       - name: Compile SDL1
-        if: matrix.type != "sdl2"
+        if: matrix.type != 'sdl2'
         run: |
           chmod +x vs2015/sdl/build-scripts/strip_fPIC.sh
           cd vs2015/sdl
@@ -70,7 +71,7 @@ jobs:
           cd $GITHUB_WORKSPACE/vs2015/sdlnet
           ./build-dosbox.sh
       - name: Compile SDL2
-        if: matrix.type == "sdl2"
+        if: matrix.type == 'sdl2'
         run: |
           chmod +x vs2015/sdl/build-scripts/strip_fPIC.sh
           cd vs2015/sdl2
@@ -107,28 +108,28 @@ jobs:
           echo "LDFLAGS=\"$LDFLAGS\"" >> $GITHUB_ENV
           echo "INTERNAL_FREETYPE=1" >> $GITHUB_ENV
       - name: Compile DOSBox-X
-        if: matrix.type == ""
+        if: matrix.type == ''
         run: |
           chmod +x configure
           # FIXME: MinGW builds should enable the debugger eventually
           ./configure --enable-core-inline --enable-d3d9 --enable-d3d-shaders --prefix=/usr
           make -j
       - name: Compile DOSBox-X (sdldraw)
-        if: matrix.type == "sdldraw"
+        if: matrix.type == 'sdldraw'
         run: |
           chmod +x configure
           # FIXME: MinGW builds should enable the debugger eventually
           ./configure --enable-core-inline --enable-force-menu-sdldraw --enable-d3d9 --enable-d3d-shaders --prefix=/usr
           make -j
       - name: Compile DOSBox-X (lowend)
-        if: matrix.type == "lowend"
+        if: matrix.type == 'lowend'
         run: |
           chmod +x configure
           # FIXME: MinGW builds should enable the debugger eventually
           ./configure --enable-core-inline --disable-mt32 --disable-libfluidsynth --disable-libslirp --enable-d3d9 --enable-d3d-shaders  --prefix=/usr
           make -j
       - name: Compile DOSBox-X (SDL2)
-        if: matrix.type == "sdl2"
+        if: matrix.type == 'sdl2'
         run: |
           chmod +x configure
           # FIXME: MinGW builds should enable the debugger eventually
