--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -112,27 +112,6 @@ jobs:
           echo "CXXFLAGS=\"$CXXFLAGS\"" >> $GITHUB_ENV
           echo "LDFLAGS=\"$LDFLAGS\"" >> $GITHUB_ENV
           echo "INTERNAL_FREETYPE=1" >> $GITHUB_ENV
-      - name: Compile DOSBox-X
-        if: matrix.type == ''
-        run: |
-          chmod +x configure
-          # FIXME: MinGW builds should enable the debugger eventually
-          ./configure --enable-core-inline --enable-d3d9 --enable-d3d-shaders --prefix=/usr
-          make -j
-      - name: Compile DOSBox-X (sdldraw)
-        if: matrix.type == 'sdldraw'
-        run: |
-          chmod +x configure
-          # FIXME: MinGW builds should enable the debugger eventually
-          ./configure --enable-core-inline --enable-force-menu-sdldraw --enable-d3d9 --enable-d3d-shaders --prefix=/usr
-          make -j
-      - name: Compile DOSBox-X (lowend)
-        if: matrix.type == 'lowend'
-        run: |
-          chmod +x configure
-          # FIXME: MinGW builds should enable the debugger eventually
-          ./configure --enable-core-inline --disable-mt32 --disable-libfluidsynth --disable-libslirp --enable-d3d9 --enable-d3d-shaders  --prefix=/usr
-          make -j
       - name: MINGW_ARCH hack
         run: |
           export MINGW_ARCH=${{ matrix.prefix }}
@@ -141,6 +120,27 @@ jobs:
           export MINGW_ARCH="x86_64"
           fi
           echo "MINGW_ARCH=$MINGW_ARCH" >> $GITHUB_ENV
+      - name: Compile DOSBox-X
+        if: matrix.type == ''
+        run: |
+          chmod +x configure
+          # FIXME: MinGW builds should enable the debugger eventually
+          ./configure --target=$MINGW_ARCH-w64-mingw32 --enable-core-inline --enable-d3d9 --enable-d3d-shaders --prefix=/usr
+          make -j
+      - name: Compile DOSBox-X (sdldraw)
+        if: matrix.type == 'sdldraw'
+        run: |
+          chmod +x configure
+          # FIXME: MinGW builds should enable the debugger eventually
+          ./configure --target=$MINGW_ARCH-w64-mingw32 --enable-core-inline --enable-force-menu-sdldraw --enable-d3d9 --enable-d3d-shaders --prefix=/usr
+          make -j
+      - name: Compile DOSBox-X (lowend)
+        if: matrix.type == 'lowend'
+        run: |
+          chmod +x configure
+          # FIXME: MinGW builds should enable the debugger eventually
+          ./configure --target=$MINGW_ARCH-w64-mingw32 --enable-core-inline --disable-mt32 --disable-libfluidsynth --disable-libslirp --enable-d3d9 --enable-d3d-shaders  --prefix=/usr
+          make -j
       - name: Compile DOSBox-X (SDL2)
         if: matrix.type == 'sdl2'
         run: |
