--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -70,8 +70,9 @@ jobs:
            MINGW_ARCH: ${{ matrix.prefix }}
         run: |
           export MINGW_ARCH_A=$MINGW_ARCH
-          if [ $MINGW_ARCH -eq "x86-64" ] then
-          export MINGW_ARCH_A="x86_64"
+          if [ $MINGW_ARCH -eq "x86-64" ]
+          then
+          export MINGW_ARCH_A=x86_64
           fi
           echo "MINGW_ARCH=$MINGW_ARCH_A" >> $GITHUB_ENV
           echo "CC=$MINGW_ARCH_A-w64-mingw32-gcc" >> $GITHUB_ENV
