--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -75,9 +75,6 @@ jobs:
           export MINGW_ARCH_A=x86_64
           fi
           echo "MINGW_ARCH=$MINGW_ARCH_A" >> $GITHUB_ENV
-          echo "CC=$MINGW_ARCH_A-w64-mingw32-gcc" >> $GITHUB_ENV
-          echo "CPP=$MINGW_ARCH_A-w64-mingw32-cpp" >> $GITHUB_ENV
-          echo "CXX=$MINGW_ARCH_A-w64-mingw32-g++" >> $GITHUB_ENV
       - run: ./autogen.sh
         name: Autoregen
       - name: Compile SDL1
@@ -85,21 +82,21 @@ jobs:
         run: |
           chmod +x vs2015/sdl/build-scripts/strip_fPIC.sh
           cd vs2015/sdl
-          ./build-dosbox.sh --host=unknown-pc-mingw64
+          ./build-dosbox.sh
           cd $GITHUB_WORKSPACE/vs2015/sdlnet
-          ./build-dosbox.sh --host=unknown-pc-mingw64
+          ./build-dosbox.sh
       - name: Compile SDL2
         if: matrix.type == 'sdl2'
         run: |
           chmod +x vs2015/sdl/build-scripts/strip_fPIC.sh
           cd vs2015/sdl2
-          ./build-dosbox.sh --host=unknown-pc-mingw64
+          ./build-dosbox.sh
           cd $GITHUB_WORKSPACE/vs2015/sdlnet
-          ./build-dosbox.sh --host=unknown-pc-mingw64
+          ./build-dosbox.sh
       - name: Compile deps
         run: |
           cd $GITHUB_WORKSPACE/vs2015/libpng
-          ./build-dosbox.sh --host=unknown-pc-mingw64
+          ./build-dosbox.sh
           top=$GITHUB_WORKSPACE
           new="-I$top/vs2015/libpng/linux-host/include "
           nld="-L$top/vs2015/libpng/linux-host/lib "
@@ -112,7 +109,7 @@ jobs:
           echo "CXXFLAGS=\"$CXXFLAGS\"" >> $GITHUB_ENV
           echo "LDFLAGS=\"$LDFLAGS\"" >> $GITHUB_ENV
           cd $GITHUB_WORKSPACE/vs2015/freetype
-          ./build-dosbox.sh --host=unknown-pc-mingw64
+          ./build-dosbox.sh
           new="-I$top/vs2015/freetype/linux-host/include/freetype2 "
           nld="-L$top/vs2015/freetype/linux-host/lib -lfreetype "
           export CFLAGS="$new$CFLAGS"
@@ -125,34 +122,39 @@ jobs:
           echo "CXXFLAGS=\"$CXXFLAGS\"" >> $GITHUB_ENV
           echo "LDFLAGS=\"$LDFLAGS\"" >> $GITHUB_ENV
           echo "INTERNAL_FREETYPE=1" >> $GITHUB_ENV
+      - name: Setup MinGW
+        run: |
+          echo "CC=$MINGW_ARCH-w64-mingw32-gcc" >> $GITHUB_ENV
+          echo "CPP=$MINGW_ARCH-w64-mingw32-cpp" >> $GITHUB_ENV
+          echo "CXX=$MINGW_ARCH-w64-mingw32-g++" >> $GITHUB_ENV
       - name: Compile DOSBox-X
         if: matrix.type == ''
         run: |
           chmod +x configure
           # FIXME: MinGW builds should enable the debugger eventually
           ./configure --host=$MINGW_ARCH-pc-mingw64 --enable-core-inline --enable-d3d9 --enable-d3d-shaders --prefix=/usr
-          make -j
+          make -j3
       - name: Compile DOSBox-X (sdldraw)
         if: matrix.type == 'sdldraw'
         run: |
           chmod +x configure
           # FIXME: MinGW builds should enable the debugger eventually
           ./configure --host=$MINGW_ARCH-pc-mingw64 --enable-core-inline --enable-force-menu-sdldraw --enable-d3d9 --enable-d3d-shaders --prefix=/usr
-          make -j
+          make -j3
       - name: Compile DOSBox-X (lowend)
         if: matrix.type == 'lowend'
         run: |
           chmod +x configure
           # FIXME: MinGW builds should enable the debugger eventually
           ./configure --host=$MINGW_ARCH-pc-mingw64 --enable-core-inline --disable-mt32 --disable-libfluidsynth --disable-libslirp --enable-d3d9 --enable-d3d-shaders  --prefix=/usr
-          make -j
+          make -j3
       - name: Compile DOSBox-X (SDL2)
         if: matrix.type == 'sdl2'
         run: |
           chmod +x configure
           # FIXME: MinGW builds should enable the debugger eventually
           ./configure --enable-core-inline --enable-d3d9 --host=$MINGW_ARCH-pc-mingw64 --enable-d3d-shaders --enable-sdl2 --prefix=/usr
-          make -j
+          make -j3
       - name: Prepare artifact
         run: |
           strip src/dosbox-x.exe
